--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
-version: "3.9"
+version: '3.9'
 
 services:
-    database_ignite:
+    database:
         image: postgres
         container_name: database_ignite
         restart: always
@@ -13,15 +13,20 @@ services:
             - POSTGRES_DB=rentx
         volumes:
             - pgdata:/data/postgres
-        network_mode: host
+
     app:
         build: .
         container_name: rentx
+        restart: always
         ports:
             - 3333:3333
+            - 9229:9229
         volumes:
             - .:/usr/app
-        network_mode: host
+        links:
+            - database
+        depends_on:
+            - database
 
 volumes:
     pgdata:
