--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "main": "index.js",
     "license": "MIT",
     "scripts": {
-        "dev": "ts-node-dev --poll --inspect --transpile-only --ignore-watch node_modules --respawn src/server.ts"
+        "dev": "ts-node-dev --poll --inspect --transpile-only --ignore-watch node_modules --respawn src/server.ts",
+        "typeorm": "ts-node-dev ./node_modules/typeorm/cli"
     },
     "dependencies": {
         "csv-parse": "^5.0.4",
@@ -15,6 +16,7 @@
         "pg": "^8.7.3",
         "reflect-metadata": "^0.1.13",
         "swagger-ui-express": "^4.3.0",
+        "tsyringe": "^4.6.0",
         "typeorm": "^0.2.41",
         "uuid": "^8.3.2"
     },
